--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/iconPizza.png" />
+    <link rel="icon" type="image" href="/iconPizza.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/b6376ba4fa.js" crossorigin="anonymous"></script>
     <title>Desafio - React Pizzeria</title>
